# kessel

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  grammar.toml  icon_overrides.toml
.github/ISSUE_TEMPLATE/: implementation-task.md
.github/workflows/: ci.yml  release.yml
docs/: MAPPINGS.md  STATUS.md  cli.md  schema.md  sith-warrior-story-exarch.md
output/: discipline_trees.json  parsely_talent_trees.json  talent_tree_mapping.json
scripts/: all_missions_decoder.py  all_missions_v4.json  all_origins_decoder.py  all_quests_decoder.py  analyze_companion_missions.py  analyze_companion_prereqs.py  analyze_gom.py  analyze_heroics.py  analyze_talent_strings.py  analyze_talents.py  build_discipline_trees.py  build_quest_graph.py  build_talent_mapping.py  build_talent_tree.py  check_bucket_coverage.py  check_prototype_nodes.py  check_world_quests.py  construct_heroic_quests.py  decode_gom.py  deep_decode_gom.py  download_missing_icons.py  download_parsely_icons.py  export_talent_trees.py  extract_quest_structure.py  extract_sample_prototype.py  find_heroic_fqns.py  find_missing_abilities.py  generate_missing_upserts.py  heroic_quests_constructed.json  map_missing_to_spice.py  match_parsely_icons.py  missions_decoder_v4.py  origin_quest_order.py  prepare_synthetic_icons.py  quest_flow_analyzer.py  quest_schema_decoder.py  recursive_gom_decoder.py  scrape_parsely_icons.py  scrape_parsely_trees.py  update_missing_with_downloads.py
src/: db.rs  dds.rs  gifts.rs  grammar.rs  hash.rs  icon_overrides.rs  lib.rs  main.rs  myp.rs  pbuk.rs  quest.rs  stb.rs  unknowns.rs  xml_parser.rs
src/schema/: item.rs  mod.rs
tests/: myp_test.rs  pbuk_test.rs  schema_test.rs  xml_parser_test.rs
